
syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "net.atos.daf.ct2.geofenceservice";

package geofence;

service GeofenceService{
rpc DeleteGeofence (DeleteRequest) returns (GeofenceDeleteResponse);
rpc CreatePolygonGeofence (GeofenceRequest) returns (GeofenceResponse);
rpc GetAllGeofence (GeofenceEntityRequest) returns (GeofenceEntityResponceList);
rpc CreateCircularGeofence (CircularGeofenceRequest) returns (CircularGeofenceResponse);
rpc UpdatePolygonGeofence (GeofencePolygonUpdateRequest) returns (GeofencePolygonUpdateResponce);
}

enum Responsecode{
  Success = 200;
  Failed = 400;
  Conflict = 409;
  NotFound = 404;
  InternalServerError=500;
}

message DeleteRequest{
   repeated int32 GeofenceId=1;
   int32 organization_id=2;
}
message GeofenceDeleteResponse {
  Responcecode Code=1;
  string Message = 2;  
}

message GeofenceRequest{
    int32 Id =1;
    google.protobuf.Int32Value OrganizationId=2;
    int32 CategoryId = 3;
    int32 SubCategoryId = 4;
    string Name =5;
    string Type=6;
    string Address=7;
    string City=8;
    string Country=9;
    string Zipcode=10;
    double Latitude=11;
    double Longitude=12;
    double Distance=13;
    string State=14;
    int32 TripId = 15;
    int32 CreatedBy = 16;
    repeated NodeRequest NodeRequest=17;
    bool Exists=18;
}
message NodeRequest{
    int32 Id =1;
    int32 LandmarkId = 2;
    int32 SeqNo = 3;
    double Latitude =4;
    double Longitude =5;
    string State=6;
    int32 CreatedBy = 7;
}

message GeofenceResponse{
   GeofenceRequest GeofenceRequest =1;
    Responcecode Code=2;
    string message = 3;
}

message GeofenceEntityRequest{
    int32 organization_id =1;
    int32 category_id = 2;
    int32 sub_category_id = 3;
    int32 roleIdlevel =4;
}

message GeofenceEntityResponceList  {
  repeated GeofenceEntityResponce GeofenceList = 1;
  Responcecode code = 2;
}
message GeofenceEntityResponce{
    string geofenceName = 1;
    string categoryName =2;
    string subCategoryName=3;
    int32 geofenceId=4;

}

message CircularGeofenceRequest{
   repeated GeofenceRequest GeofenceRequest =1;
}

message CircularGeofenceResponse{
   repeated GeofenceRequest GeofenceRequest =1;
    Responcecode Code=2;
    string message = 3;
}

message GeofencePolygonUpdateRequest{
 int32 Id =1;
 google.protobuf.Int32Value OrganizationId=2;
 int32 CategoryId = 3;
 int32 SubCategoryId = 4;
 string Name =5;
 bool Exists=6;
}

message GeofencePolygonUpdateResponce{
    GeofencePolygonUpdateRequest GeofencePolygonUpdateRequest=1;
    Responcecode Code=2;
    string message = 3;
}